src/App.css
.background-container {
  position: relative;
  height: 100vh;
  min-height: 450px;
}

.background-container::before {
  height: 100vh;
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: url('../public/Tesla-bg.jpg');
  background-position: center top;
  background-size: cover;
    background-repeat: no-repeat;
  filter: blur(10px) opacity(0.2);
  z-index: -1;
}

.tiny-font {
  font-size: 0.8rem;
}

.tesla-logo {
  width: 10rem;
}

.burger-menu {
  display: none !important;
}

.burger-menu-navbar {
  display: none !important;
}

.sidebar-menu {
  height: 100vh; /*Ojo*/
  min-height: 450px;
  width: 15rem;
  background-color: #f5f5f5;
  box-shadow: 0 0 10px rgba(8, 7, 16, 0.6);
}

.sidebar-menu-ul {
  width: 85%;
  padding: 0;
  margin: 0;
}

.sidebar-menu-ul a,
.sidebar-menu-ul button {
  width: 100%;
  list-style-type: none;
  text-decoration: none;
  color: black;
  padding: 1rem 2.5rem 1rem 0.5rem;
  cursor: pointer;
  text-align: start;
}

.sidebar-menu-ul li a {
  text-decoration: none;
  color: black;
}

.sidebar-menu-ul button {
  border: none;
  background-color: transparent;
}

.sidebar-menu-ul a:hover,
.sidebar-menu-ul button:hover {
  background-color: #e5e5e5;
}

.sidebar-btn-container-show {
  position: absolute;
  right: -3.2rem;
  bottom: 0;
  z-index: 3;
}

.sidebar-btn-container-hidden {
  position: absolute;
  left: 0;
  bottom: 0;
  z-index: 3;
}

.active {
  width: 85%;
  background-color: #e5e5e5 !important;
  font-weight: bold;
}

.show {
  display: flex !important;
}

.hide {
  display: none !important;
}

.session-container {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  background-image: url('../public/Tesla2.jpg');
  background-position: center bottom;
  background-size: cover;
}

.session-box {
  width: 90%;
  max-width: 500px;
  min-width: 300px;
  min-height: 250px;
  padding: 2rem 1rem 1.5rem 1rem;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;

  border-radius: 20px;
}

.card-model {
  width: 100%;
  margin: auto;
  text-align: center;
}

.card-model-img {
  width: 18rem;
  height: 18rem;
  object-fit: cover;
  border-radius: 50%;
}

.swiper {
  width: 80vw;
}

.swiper-button-prev,
.swiper-button-next {
  top: 34%;
}

.swiper-button-prev::after {
  color: black;
  content: '◀';
}

.swiper-button-next::after {
  color: black;
  content: '▶';
}

@media screen and (max-width: 767px) {
  .burger-menu {
    display: flex !important;
  }

  .burger-menu-navbar {
    display: flex !important;
  }

  .sidebar {
    display: none !important;
  }

  .sidebar-menu-ul a,
  .sidebar-menu-ul button {
    width: 100%;
    list-style-type: none;
    text-decoration: none;
    color: black;
    padding: 1rem 0.5rem 1rem 2.5rem;
    cursor: pointer;
    text-align: start;
  }

  .car-details {
    display: none !important;
  }

  .card-model {
    width: 100%;
    padding: 4rem 1rem 2rem 1rem;
  }

  .card-model-img {
    width: 16rem;
    height: 16rem;
    object-fit: cover;
    border-radius: 50%;
  }

  .swiper {
    width: 95vw;
  }
}

@media screen and (min-width: 768px) and (max-width: 950px) {
  .card-model {
    width: 100%;
    padding: 4rem 1rem 2rem 1rem;
  }

  .swiper {
    width: 70vw;
    min-width: 748px;
    max-width: 880px;
  }
}

@media screen and (min-width: 951px) and (max-width: 1400px) {
  .card-model-img {
    width: 15rem;
    height: 15rem;
    object-fit: cover;
    border-radius: 50%;
  }

  .swiper {
    width: 75vw;
  }

}

